--- a/go-final/Dockerfile
+++ b/go-final/Dockerfile
@@ -5,7 +5,7 @@ WORKDIR /go-final
 COPY go.mod go.sum ./
 RUN go mod download && go mod verify
 
-COPY . .
+COPY .. .
 RUN go build -v -o ./cmd/api ./...
 
 CMD ["go","run","./cmd/api"]
